# PureDarwin

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  PUREDARWIN_LICENSE.txt  README.md  WELCOME  cmake-variants.yaml  configure.sh
projects/: CMakeLists.txt  README.md
projects/AppleAPIC/: Apple8259PIC.cpp  Apple8259PIC.h  AppleAPIC.h  CMakeLists.txt
projects/AppleI386GenericPlatform/: AppleI386CPU.h  AppleI386PlatformExpert.cpp  AppleI386PlatformExpert.h  CMakeLists.txt
projects/AppleIntelPIIXATA/: AppleIntelICHxSATA.h  AppleIntelPIIXATAChannel.cpp  AppleIntelPIIXATARoot.cpp  AppleIntelPIIXATARoot.h  AppleIntelPIIXATATiming.h  AppleIntelPIIXPATA.h  Info.plist
projects/ApplePS2Controller/: ApplePS2Device.h  ApplePS2KeyboardDevice.cpp  ApplePS2MouseDevice.h  CMakeLists.txt  IOSyncer.h
projects/AvailabilityVersions/: CMakeLists.txt  build_headers.cmake  dummy.c  print_dyld_os_versions.rb
projects/IOACPIFamily/: IOACPIPlatformExpert.cpp  Info.plist
projects/IOATAFamily/: ATATimerEventSource.cpp  CMakeLists.txt  IOATACommand.cpp  IOATAController.cpp  IOATADevConfig.cpp  IOATADevice.cpp  IOATARegI386.cpp  Info.plist
projects/IOPCIFamily/: .version  CMakeLists.txt  IOPCIConfigurator.cpp  IOPCIDevice.cpp  IOPCIDeviceI386.cpp  IOPCIDeviceMappedIO.cpp  IOPCIMessagedInterruptController.cpp  Info.plist  dmar.h  vtd.c
projects/IOPCIFamily/ApplePIODMA/: ApplePIODMARequest.cpp  ApplePIODMARequestPool.cpp  CMakeLists.txt  Info.plist
projects/IOStorageFamily/: CMakeLists.txt  IOBlockStorageDevice.cpp  IOFDiskPartitionScheme.cpp  IOGUIDPartitionScheme.cpp  IOMedia.cpp  IOMediaBSDClient.cpp  IOPartitionScheme.cpp  IOStorage.cpp  user_stub.c
projects/IOStorageFamily/en.lproj/: InfoPlist.strings
projects/Kernel/Extensions/: CMakeLists.txt
projects/Kernel/xnu/: CMakeLists.txt
projects/Kernel_XNU/: CMakeLists.txt
projects/Kernel_XNU/KernelExtensions/: CMakeLists.txt
projects/Kernel_XNU/libsystem_kernel/: CMakeLists.txt
projects/Kernel_XNU/xnu/: CMakeLists.txt
projects/Legacy/pd_xkp/: Crash.m  Scrambler.h  pd_xkp
projects/Libc/: .upstream_base_commits  .version  CMakeLists.txt  feature_config.cmake  libc-features.h.in
projects/Libc/Libc.xcodeproj/: project.pbxproj
projects/Libc/darwin/: subsystem.c
projects/Libc/include/: CMakeLists.txt  stdio.h  stdlib.h
projects/Libc/man/: manpages.lst
projects/Libc/os/: assumes.h
projects/Libc/tests/: abort_tests.c  acl_tests.c  arc4random.c  collections_basic.c  collections_random.c  ctermid.c  err.c  flockfile.c  freebsd_fmemopen.c  freebsd_open_wmemstream.c  freebsd_qsort.c  ftell_ungetc.c  getdate.c  locale.c  net.c  netbsd_strerror.c  netbsd_strptime.c  os_simple_hash.c  realpath.c  realpath_edge.c  strptime.c
projects/Libc/xcodescripts/: collections.xcconfig  libc.xcconfig  variants.xcconfig
projects/Libcompiler_rt/: CMakeLists.txt
projects/Libcompiler_rt/lib/: apple_versioning.c  atomic.c
projects/Libraries/: CMakeLists.txt
projects/Libraries/AvailabilityVersions/: availability.pl
projects/Libraries/libSystem/: CMakeLists.txt
projects/Libraries/libdispatch/: CMakeLists.txt
projects/Libraries/libkmod/: CMakeLists.txt
projects/Libraries/libpthread/: CMakeLists.txt
projects/PureDarwinPackageDatabase/: README.txt
projects/PureDarwinPackageDatabase/PackageLists/: missing.txt  package_list.txt
projects/PureDarwinPackageDatabase/Systems/: Example_System.txt
projects/PureDarwinPackageDatabase/tools/: dbstats  pdpdmake
projects/PureDarwinSettings/: APPLE_DRIVER_LICENSE.txt
projects/PureDarwinSettings/PostBootSvc/: hajimeru  relinquish-core-files
projects/PureDarwinSettings/etc/: bashrc  profile  zshrc
projects/XDarwin/: Build.sh  Gnome.sh  README.txt  TODO.txt  XDarwin  darwin.c  darwin.h  darwinEvents.c  darwinXinput.c  darwinfb.h  keysym2ucs.c  keysym2ucs.h  quartzKeyboard.c  xfIOKit.c  xfIOKitCursor.c
projects/architecture_headers/: CMakeLists.txt
projects/dyld/: .version  CMakeLists.txt  libdyld.cmake
projects/dyld/build-scripts/: configure-dyld-archives.sh  dyld_tests-build.sh  update_dyld_shared_cache-build.sh
projects/dyld/configs/: libdyld.xcconfig  update_dyld_sim_shared_cache.xcconfig
projects/dyld/dyld.xcodeproj/: ContainerizedTestRunner.xctestplan  project.pbxproj
projects/dyld/dyld3/: APIs.cpp  APIs_macOS.cpp  AllImages.h  Closure.cpp  ClosureBuilder.cpp  ClosureFileSystemPhysical.cpp  ClosurePrinter.cpp  ClosureWriter.cpp  JSON.h  Loading.h  MachOAnalyzer.cpp  MachOAppCache.cpp  MachOFile.cpp  RootsChecker.h  Tracing.cpp  dyld_app_cache_util.cpp  libdyldEntryVector.cpp
projects/dyld/src/: CMakeLists.txt  ImageLoaderMachOClassic.h  ImageLoaderMegaDylib.cpp  dyld2.cpp  dyldAPIsInLibSystem.cpp  (+5 more)
projects/libcppabi/: CMakeLists.txt
projects/libdispatch/: CMakeLists.txt
projects/libmalloc/: .version  CMakeLists.txt
projects/libplatform/: CMakeLists.txt
projects/libpthread/: CMakeLists.txt
projects/libsystem_kernel/: CMakeLists.txt
projects/libunwind/: .version  CMakeLists.txt
projects/pd_xkp/: Crash.h  Crash.m  Makefile  Scrambler.h  Scrambler.m  Usage.h  Usage.m  main.m  pd_xkp
projects/xnu/: .version  CMakeLists.txt  Makefile  functions.cmake  preprocess_files.cmake
src/: CMakeLists.txt
src/Kernel/: CMakeLists.txt
src/Libraries/: CMakeLists.txt
tools/: CMakeLists.txt  llvm
tools/bison/: CMakeLists.txt  bison
tools/cctools/: CMakeLists.txt  src
tools/ctfconvert/: CMakeLists.txt  dtrace
tools/developer_cmds/: CMakeLists.txt  src
tools/dtrace_ctf/: CMakeLists.txt
tools/fbsd_base/: CMakeLists.txt  download-base.cmake  download-kernel.cmake
tools/gm4/: CMakeLists.txt  gm4
tools/gnumake/: CMakeLists.txt  src
tools/gperf/: CMakeLists.txt  gperf
tools/iig/: CMakeLists.txt  iig.cpp  iig.h
tools/ld64/: CMakeLists.txt  ld64
tools/mig/: CMakeLists.txt  DARWIN  mig.sh  server.c  src  user.c
tools/ninja/: DARWIN_INFO
tools/rc/: README.md  rc  setup.sh
tools/unifdef/: CMakeLists.txt  DARWIN  unifdef.c
tools/xar/: CMakeLists.txt
tools/xnu-tools/: CMakeLists.txt  src
(+7136 files in other folders)
