add_subdirectory(AppleAPIC)
add_subdirectory(AppleI386GenericPlatform)
add_subdirectory(AppleIntelPIIXATA)
add_subdirectory(ApplePS2Controller)
add_subdirectory(AvailabilityVersions)
add_subdirectory(IOACPIFamily)
add_subdirectory(IOATAFamily)
add_subdirectory(IOPCIFamily)
add_subdirectory(IOStorageFamily)
add_subdirectory(libdispatch)
add_subdirectory(libplatform)
add_subdirectory(libpthread)
add_subdirectory(xnu)
