add_subdirectory(AppleAPIC)
add_subdirectory(AppleI386GenericPlatform)
add_subdirectory(AppleIntelPIIXATA)
add_subdirectory(ApplePS2Controller)
add_subdirectory(AvailabilityVersions)
add_subdirectory(IOACPIFamily)
add_subdirectory(IOATAFamily)
add_subdirectory(IOPCIFamily)
add_subdirectory(IOStorageFamily)
add_subdirectory(Libc)
add_subdirectory(Libcompiler_rt)
add_subdirectory(dyld)
add_subdirectory(libcppabi)
add_subdirectory(libdispatch)
add_subdirectory(libmalloc)
add_subdirectory(libplatform)
add_subdirectory(libpthread)
add_subdirectory(libunwind)
add_subdirectory(xnu)
